[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "rs-fsrs-nodejs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = {version = "2",features = ["chrono_date"]}
napi-derive = "2"
fsrs = { git = "https://github.com/open-spaced-repetition/rs-fsrs" }
chrono = {version = "0.4.38"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
